Fix table alignment

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -10,7 +10,6 @@ table th, table td {
     border-top: 1px solid #DDDDDD;
     line-height: 20px;
     padding: 8px;
-    text-align: left;
     vertical-align: top;
 }
 table th {
